2014-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* select.el: Use lexical-binding.
	(gui-set-selection): Provide an implementation for non-GUI frames
	(bug#18791).
	* term/x-win.el: Use lexical-binding.
	(x-clipboard-yank): Fix up missed renamings.
	* term/w32-win.el (libgif-version, libjpeg-version): Silence compiler.
	(w32--set-selection): Fix up var names.
	* term/pc-win.el: Use lexical-binding.
	(w16-selection-exists-p): Silence compiler warning.
	(w16-selection-owner-p): Fix up missed renamings.

	* emacs-lisp/bytecomp.el (byte-compile-form): Remove left-over debug.

	* frame.el (frame-notice-user-settings): Fix excessive quoting.

2014-10-22  Tassilo Horn  <tsdh@gnu.org>

	* doc-view.el (doc-view-open-text): View the document's plain text
	in the current buffer instead of a new one.
	(doc-view-toggle-display): Handle the case where the current
	buffer contains the plain text contents of the document.
	(doc-view-initiate-display): Don't switch to fallback mode if the
	user wants to view the doc's plain text.
	(doc-view-set-doc-type): Use assoc-string instead of
	assoc-ignore-case.

2014-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-key): Fix clicks on the mode-line.
	(set-transient-map): Return exit function.

	* mouse.el (mouse-drag-line): Use set-transient-map (bug#18015).
	(mouse--down-1-maybe-follows-link): Remove unused var `this-event'.
	(mouse-yank-secondary): Use gui-get-selection.
	(mouse--down-1-maybe-follows-link): Use read-key.

	* xt-mouse.el: Add `event-kind' property on the fly from
	xterm-mouse-translate-1 rather than statically at the outset.

2014-10-21  Daniel Colascione  <dancol@dancol.org>

	* vc/vc-dispatcher.el (vc-resynch-window): Tell view-mode not to
	change window configuration when we turn it off.

2014-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	Get rid of backend-dependent selection-handling functions for kill/yank
	and make it generic instead by relying on the lower-level selection